--- a/src/styles/theme/_vars.scss
+++ b/src/styles/theme/_vars.scss
@@ -1,1 +1,5 @@
 /* variables for colors, fonts etc. */
+:export {
+  $main-layout-background-color: #FAFAFA;
+  $components-background-color: #FFFFFF;
+}
