--- a/src/styles/global/index.scss
+++ b/src/styles/global/index.scss
@@ -1,1 +1,8 @@
 @import 'normilize';
+@import url('https://fonts.googleapis.com/css2?family=Inter:wght@400;500;600&display=swap');
+
+* {
+  font-family: 'Inter';
+  font-style: normal;
+  font-weight: 500;
+}
