feature/INT-5525: feat: add loader, profile-block database-block, courses-block

--- a/src/app/components/courses/courses-cards/styles.scss
+++ b/src/app/components/courses/courses-cards/styles.scss
@@ -1,13 +1,6 @@
-.card {
+.courses-card {
   width: 300px;
   border-radius: 15px;
-
-  & .ant-card-body {
-    display: flex;
-    flex-direction: column;
-    padding: 10px;
-    gap: 10px;
-  }
 
   &__header {
     display: flex;
@@ -71,5 +64,12 @@
         }
       }
     }
+  }
+
+  & .ant-card-body {
+    display: flex;
+    flex-direction: column;
+    padding: 10px;
+    gap: 10px;
   }
 }
