--- a/src/app/components/courses/course-activites-card/styles.scss
+++ b/src/app/components/courses/course-activites-card/styles.scss
@@ -52,23 +52,25 @@
       }
     }
   }
-}
 
-:where(.css-dev-only-do-not-override-ph9edi).ant-progress
-  .ant-progress-inner:not(.ant-progress-circle-gradient)
-  .ant-progress-circle-path {
-  stroke: #5b68ff;
-}
+  & .ant-card-body {
+    height: 100%;
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    gap: 50px;
 
-:where(.css-dev-only-do-not-override-ph9edi).ant-progress
-  .ant-progress-circle-trail {
-  stroke: #cdd3ff;
-}
+    &
+      :where(.css-dev-only-do-not-override-ph9edi).ant-progress
+      .ant-progress-inner:not(.ant-progress-circle-gradient)
+      .ant-progress-circle-path {
+      stroke: #5b68ff;
+    }
 
-.ant-card-body {
-  height: 100%;
-  width: 100%;
-  display: flex;
-  flex-direction: column;
-  gap: 50px;
+    &
+      :where(.css-dev-only-do-not-override-ph9edi).ant-progress
+      .ant-progress-circle-trail {
+      stroke: #cdd3ff;
+    }
+  }
 }
