--- a/src/app/components/dashboard/dashboard-card/styles.scss
+++ b/src/app/components/dashboard/dashboard-card/styles.scss
@@ -1,18 +1,26 @@
 .dashboard-card {
-  text-align: center;
   width: 167px;
   height: 191px;
   background-color: #e7e6fb;
-  border-radius: 12px;
+
+  &__img {
+    width: 57px;
+    height: 60px;
+  }
 
   &__title {
     font-size: 16px;
-    margin-top: 10px;
-    margin-bottom: 10px;
   }
 
   &__count {
     font-weight: 600;
     font-size: 20px;
+  }
+
+  & .ant-card-body {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    gap: 10px;
   }
 }
