--- a/src/app/components/courses/courses-cards/styles.scss
+++ b/src/app/components/courses/courses-cards/styles.scss
@@ -1,5 +1,6 @@
+$components-courses-btn-gray-btn: #9da6ba;
+
 .courses-card {
-  width: 300px;
   border-radius: 15px;
 
   &__header {
@@ -12,7 +13,7 @@
     }
 
     &__btn {
-      color: #9da6ba;
+      color: $components-courses-btn-gray-btn;
     }
   }
 
@@ -38,7 +39,7 @@
     &__name {
       height: 12px;
       font-size: 10px;
-      color: #9da6ba;
+      color: $components-courses-btn-gray-btn;
     }
   }
 
@@ -56,7 +57,7 @@
         gap: 5px;
         font-size: 10px;
         line-height: 12px;
-        color: #9da6ba;
+        color: $components-courses-btn-gray-btn;
 
         & img {
           width: 10px;
