--- a/src/app/components/dashboard/dashboard-card/styles.scss
+++ b/src/app/components/dashboard/dashboard-card/styles.scss
@@ -1,26 +1,32 @@
 .dashboard-card {
+  display: flex;
+  justify-content: center;
   width: 167px;
   height: 191px;
-  background-color: #e7e6fb;
 
-  &__img {
-    width: 57px;
-    height: 60px;
-  }
-
-  &__title {
-    font-size: 16px;
-  }
-
-  &__count {
-    font-weight: 600;
-    font-size: 20px;
-  }
-
-  & .ant-card-body {
+  &__content {
     display: flex;
     flex-direction: column;
     align-items: center;
+    justify-content: center;
     gap: 10px;
+
+    &__img {
+      width: 57px;
+      height: 60px;
+    }
+
+    &__title {
+      font-size: 16px;
+    }
+
+    &__count {
+      font-weight: 600;
+      font-size: 20px;
+    }
+  }
+
+  & .ant-alert-content {
+    display: none;
   }
 }
