--- a/src/app/components/general/buttons/education-btn-block/styles.scss
+++ b/src/app/components/general/buttons/education-btn-block/styles.scss
@@ -1,18 +1,20 @@
+@import 'src/styles/theme/index.scss';
+
 .education-btn-block {
   width: 250px;
 
   &:where(.css-dev-only-do-not-override-ph9edi).ant-switch.ant-switch-checked {
-    background: #5b68ff;
+    background: $components-courses-process-purple;
   }
 
   &:where(.css-dev-only-do-not-override-ph9edi).ant-menu-dark
     .ant-menu-item-selected {
-    background-color: #5b68ff;
+    background-color: $components-courses-process-purple;
   }
 
   &:where(.css-dev-only-do-not-override-ph9edi).ant-menu-light
     .ant-menu-item-selected {
-    background-color: #5b68ff;
-    color: white;
+    background-color: $components-courses-process-purple;
+    color: $components-white;
   }
 }
