--- a/src/app/components/profile/profile-block/styles.scss
+++ b/src/app/components/profile/profile-block/styles.scss
@@ -1,3 +1,5 @@
+@import 'src/styles/theme/index.scss';
+
 .profile {
   display: flex;
   flex-direction: column;
@@ -20,7 +22,7 @@
       font-weight: 400;
       font-size: 13.0861px;
       line-height: 16px;
-      color: #9da6ba;
+      color: $components-courses-btn-gray-btn;
     }
 
     &__contact-block {
@@ -73,7 +75,7 @@
           font-weight: 400;
           font-size: 11.125px;
           line-height: 13px;
-          color: #9da6ba;
+          color: $components-courses-btn-gray-btn;
         }
       }
     }
