--- a/src/styles/theme/_vars.scss
+++ b/src/styles/theme/_vars.scss
@@ -1,1 +1,6 @@
 /* variables for colors, fonts etc. */
+$components-courses-btn-green-btn: #4dc591;
+$components-courses-btn-gray-btn: #9da6ba;
+$components-white: #ffffff;
+$components-courses-process-purple: #5b68ff;
+$components-courses-in-process-purple: #cdd3ff;
