feature/INT-5200: added register module

--- a/src/app/pages/registration/styles.scss
+++ b/src/app/pages/registration/styles.scss
@@ -4,6 +4,16 @@
 
     &__form {
       max-width: 600px;
+
+      &__avatar:hover {
+        cursor: pointer;
+      }
+      &__avatar {
+        transition: all 0.2s ease-in-out;
+      }
+      &__avatar:active {
+        transform: scale(1.2);
+      }
     }
   }
 }
