--- a/src/styles/theme/_vars.scss
+++ b/src/styles/theme/_vars.scss
@@ -6,3 +6,4 @@ $components-courses-btn-gray-btn: #9da6ba;
 $components-white: #ffffff;
 $components-courses-process-purple: #5b68ff;
 $components-courses-in-process-purple: #cdd3ff;
+$filter-sort-btn-background-color: #f4f4f4
