feature/INT-5031: feat: add sort and filter for database

--- a/src/app/layouts/client-layout/styles.scss
+++ b/src/app/layouts/client-layout/styles.scss
@@ -3,11 +3,10 @@
 .client-layout {
   display: flex;
   flex-direction: row;
-  height: 100vh;
-  // background-color: $main-layout-background-color;
+  min-height: 100vh;
 
   &-menu {
-    min-height: 100vh;
+    height: 100%;
   }
 
   &-wrapper {
