--- a/src/styles/global/index.scss
+++ b/src/styles/global/index.scss
@@ -5,4 +5,10 @@
   font-family: 'Inter';
   font-style: normal;
   font-weight: 500;
+
+}
+
+body {
+  min-height: 100%;
+  //   background-color: aqua;
 }
