feature/INT-5031: fix: fixed according remarks

--- a/src/app/pages/navigation/styles.scss
+++ b/src/app/pages/navigation/styles.scss
@@ -1,10 +1,10 @@
 @import 'src/styles/theme/index.scss';
 
-.menu-btn-block {
+.navigation-block {
   display: flex;
   flex-direction: column;
 
-  .education-btn-block {
+  .navigation {
     margin: 5px 10px;
     width: 60px;
 
